archive/repository-before-managed-runs/k8s/ingress/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: kafkastreamingdata
spec:
  ingressClassName: haproxy
  rules:
    - host: grafana.kafkastreamingdata.nrp-nautilus.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
